// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TooltipStyled /> should render the component with an unknown position 1`] = `
<div
  className="TooltipStyled-fwSOCa kYeHP"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position bottom 1`] = `
<div
  className="TooltipStyled-fwSOCa kERvlt"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position left 1`] = `
<div
  className="TooltipStyled-fwSOCa imxpFv"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with position right 1`] = `
<div
  className="TooltipStyled-fwSOCa gIGKlJ"
  content="The world Champion!"
>
  Corinthians!
</div>
`;

exports[`<TooltipStyled /> should render the component with the default props 1`] = `
<div
  className="TooltipStyled-fwSOCa eCgHdf"
  content="The world Champion!"
>
  Corinthians!
</div>
`;
